--- a/tool/project/movierecipes/build.gradle
+++ b/tool/project/movierecipes/build.gradle
@@ -39,17 +39,9 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 
 //	// JWT
-	implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
-//	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
-//	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
-//	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
-
-	// JUnit
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
-//	// 4를 같이 이용해야 하는 경우
-//	testCompileOnly 'junit:junit:4.12'
-//	testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.3.1'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
