--- a/movierecipes/build.gradle
+++ b/movierecipes/build.gradle
@@ -12,6 +12,12 @@ java {
 	sourceCompatibility = '17'
 }
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
 repositories {
 	mavenCentral()
 }
