--- a/movierecipes/src/main/resources/application.properties
+++ b/movierecipes/src/main/resources/application.properties
@@ -23,3 +23,5 @@ jwt.prefix=Bearer
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.config-location=classpath:mybatis-config.xml
 mybatis.configuration.map-underscore-to-camel-case=true
+
+project.folderPath="files/"
