--- a/movierecipes/src/main/resources/application.properties
+++ b/movierecipes/src/main/resources/application.properties
@@ -20,8 +20,8 @@ jwt.header=Authorization
 jwt.prefix=Bearer
 
 # mybatis
-mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.config-location=classpath:mybatis-config.xml
-mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.mapper-locations=classpath:mapper/*.xml
+#mybatis.config-location=classpath:mybatis-config.xml
+#mybatis.configuration.map-underscore-to-camel-case=true
 
 project.folderPath="files/"
